--- a/src/makefiles/Makefile.osx
+++ b/src/makefiles/Makefile.osx
@@ -1,5 +1,5 @@
-CC=gcc
-ARCH=-arch i386 -arch x86_64 -arch ppc
+CC=clang
+ARCH=-mmacosx-version-min=10.6.0
 SOURCE=args.c \
         avra.c \
         coff.c \
